--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -24,8 +24,8 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     highlightLanguages = ["python", "rust", "json", "bash"]
     yandexWebmaster = ""
 
-    logo = "/images/logo_v3_small.png"
-    logo_white = "/images/logo_v3_small_white.png"
+    logo = "/images/logo_v3_small_red.png"
+    logo_white = "/images/logo_v3_small_red.png"
     logo_width = "192"
 
     github = "https://github.com/qdrant/qdrant"
