--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -30,7 +30,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
     github = "https://github.com/qdrant/qdrant"
     quick_start = "https://github.com/qdrant/qdrant#usage"
-    tutorial = "/404.html"
+    tutorial = "/articles/neural-search-tutorial/"
 
     linkedin = "https://www.linkedin.com/in/andrey-vasnetsov-75268897/"
     telegram = "https://t.me/neural_network_engineering"
