documentation style fixes

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -20,7 +20,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
     font = "Anonymous Pro"
     highlight = true
-    highlightStyle = "monokailight"
+    highlightStyle = "default"
     highlightLanguages = ["python", "rust", "json", "bash"]
     yandexWebmaster = ""
 
