add google tag manager

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -49,6 +49,8 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
     docVersion = "v0.5.x"
 
+    googleTagManager = "GTM-KRLCXD5"
+
 
 [menu]
 
