warning and info styled elements for documentation

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -85,3 +85,5 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     weight = -70
     url = "/articles"
 
+[markup.goldmark.renderer]
+unsafe= true
