removed comments and added some fixes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,24 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: doc-sync
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-#  push:
-#    branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
-
+  pull_request:
+    branches: [ master ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  sync:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-      # Runs a single command using the runners shell
       - name: Run a one-line script
-       run: |
-         cd $GITHUB_WORKSPACE
-         bash -x automation/doc-sync.sh
-         git config --global user.name 'qdrant'
-         git config --global user.email 'qdrant@users.noreply.github.com'
-         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-         git checkout $GITHUB_HEAD_REF
-         git commit -am "docs auto-sync" && git push || true
-         git push
-       env:
-         GITHUB_WORKSPACE: ${{GITHUB_WORKSPACE}}
+        run: |
+          bash -x automation/doc-sync.sh
+          git config --global user.name 'qdrant'
+          git config --global user.email 'qdrant@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git checkout $GITHUB_REF
+          git commit -am "docs auto-sync" && git push || true
+          git push
