fixed ref and checking if there were changes in docs before  syncing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
           git config --global user.name 'qdrant'
           git config --global user.email 'qdrant@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git checkout $GITHUB_REF
+          git checkout $GITHUB_HEAD_REF
           git commit -am "docs auto-sync" && git push || true
           git push
