WIP: blog layout

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -85,5 +85,11 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     weight = -70
     url = "/articles"
 
+  [[menu.main]]
+    identifier = "blog"
+    name = "Blog"
+    weight = -60
+    url = "/blog/"
+
 [markup.goldmark.renderer]
 unsafe= true
