--- a/qdrant-landing/static/admin/config.yml
+++ b/qdrant-landing/static/admin/config.yml
@@ -18,9 +18,8 @@ collections:
       - { label: 'Preview Image', name: 'preview_image', widget: 'image'}
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string'}
-      - { label: 'Author Link', name: 'author_link', widget: 'string'}
+      - { label: 'Author Link', name: 'author_link', widget: 'string', required: false}
       - { label: 'Featured Post', name: 'featured', widget: 'boolean', default: 'false'}
-      - { label: 'Category', name: 'categories', widget: "select", options: ["News"]}
-      - { label: "Tags (use , to separate)", name: "tags", widget: "list",
-          fields: [release, jina-integration, grpc, docarray], allow_add: true, }
+      - { label: 'Category (it is better to use only one category)', name: 'categories', widget: "list", allow_add: true}
+      - { label: "Tags (use , to separate)", name: "tags", widget: "list", allow_add: true, }
       - { label: 'Body', name: 'body', widget: 'markdown' }
