--- a/qdrant-landing/static/admin/config.yml
+++ b/qdrant-landing/static/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string'}
       - { label: 'Author Link', name: 'author_link', widget: 'string', required: false}
-      - { label: 'Featured Post', name: 'featured', widget: 'boolean', default: 'false'}
+      - { label: 'Featured Post', name: 'featured', widget: 'boolean', default: false}
       - { label: 'Category (it is better to use only one category)', name: 'categories', widget: "list", allow_add: true}
       - { label: "Tags (use , to separate)", name: "tags", widget: "list", allow_add: true, }
       - { label: 'Body', name: 'body', widget: 'markdown' }
