Fixes of meta tags for social media (#29)

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -26,7 +26,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
     logo = "/images/logo_small_with_text.png"
     logo_width = "192"
-    share_preview_img = "/images/logo_with_text.svg"
+    preview_image = "/images/social_preview.png"
 
     github = "https://github.com/qdrant/qdrant"
     quick_start = "https://github.com/qdrant/qdrant/blob/master/QUICK_START.md"
