updated Font Awesome to v5.15.4

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -34,6 +34,8 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
     linkedin = "https://www.linkedin.com/company/qdrant"
     telegram = "https://t.me/neural_network_engineering"
+    twitter = "https://twitter.com/qdrant_engine"
+    discord = "https://discord.gg/tdtYvXjC4h"
 
     email = "info@qdrant.tech"
     location = "Berlin"
