Updated Font Awesome to v5.15.4 and added links to the footer (#32)
* updated Font Awesome to v5.15.4

* added links to twitter and discord

* deleted telegram link

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -33,7 +33,8 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     tutorial = "/articles/neural-search-tutorial/"
 
     linkedin = "https://www.linkedin.com/company/qdrant"
-    telegram = "https://t.me/neural_network_engineering"
+    twitter = "https://twitter.com/qdrant_engine"
+    discord = "https://discord.gg/tdtYvXjC4h"
 
     email = "info@qdrant.tech"
     location = "Berlin"
