added facebook link to the footer

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -35,6 +35,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     linkedin = "https://www.linkedin.com/company/qdrant"
     twitter = "https://twitter.com/qdrant_engine"
     discord = "https://discord.gg/tdtYvXjC4h"
+    facebook = "https://www.facebook.com/qdrant.tech"
 
     email = "info@qdrant.tech"
     location = "Berlin"
