--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -11,48 +11,48 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
 
 [params]
-    author = "Andrey Vasnetsov"
-    description = "Qdrant - Open-Source Vector Search Engine"
-    keywords = ["search engine", "neural network", "matching", "filter", "SaaS",
-        "approximate nearest neighbor search", "image search", "recommender system", "vectors",
-        "knn algorithm", "hnsw", "vector search", "embeddings", "similarity", "simaes networks",
-        "BERT", "transformer", "word2vec", "fasttext"]
+  author = "Andrey Vasnetsov"
+  description = "Qdrant - Open-Source Vector Search Engine"
+  keywords = ["search engine", "neural network", "matching", "filter", "SaaS",
+    "approximate nearest neighbor search", "image search", "recommender system", "vectors",
+    "knn algorithm", "hnsw", "vector search", "embeddings", "similarity", "simaes networks",
+    "BERT", "transformer", "word2vec", "fasttext"]
 
-    font = "Anonymous Pro"
-    highlight = true
-    highlightStyle = "default"
-    highlightLanguages = ["python", "rust", "json", "bash", "http"]
-    yandexWebmaster = ""
+  font = "Anonymous Pro"
+  highlight = true
+  highlightStyle = "default"
+  highlightLanguages = ["python", "rust", "json", "bash", "http"]
+  yandexWebmaster = ""
 
-    logo = "/images/logo_small_with_text.png"
-    logo_width = "192"
-    preview_image = "/images/social_preview.png"
+  logo = "/images/logo_small_with_text.png"
+  logo_width = "192"
+  preview_image = "/images/social_preview.png"
 
-    github = "https://github.com/qdrant/qdrant"
-    quick_start = "https://github.com/qdrant/qdrant/blob/master/QUICK_START.md"
-    tutorial = "/articles/neural-search-tutorial/"
+  github = "https://github.com/qdrant/qdrant"
+  quick_start = "https://github.com/qdrant/qdrant/blob/master/QUICK_START.md"
+  tutorial = "/articles/neural-search-tutorial/"
 
-    linkedin = "https://www.linkedin.com/company/qdrant"
-    twitter = "https://twitter.com/qdrant_engine"
-    discord = "https://discord.gg/tdtYvXjC4h"
-    facebook = "https://www.facebook.com/qdrant.tech"
+  linkedin = "https://www.linkedin.com/company/qdrant"
+  twitter = "https://twitter.com/qdrant_engine"
+  discord = "https://discord.gg/tdtYvXjC4h"
+  facebook = "https://www.facebook.com/qdrant.tech"
 
-    email = "info@qdrant.tech"
-    location = "Berlin"
+  email = "info@qdrant.tech"
+  location = "Berlin"
 
-    mailchimp_contact_form = "https://us1.list-manage.com/contact-form?u=69617d79374ac6280dd2230b2&form_id=cce004c91b038a38e5ef1ece5318fd1e"
+  mailchimp_contact_form = "https://us1.list-manage.com/contact-form?u=69617d79374ac6280dd2230b2&form_id=cce004c91b038a38e5ef1ece5318fd1e"
 
-    mailchimp_subscribe = "https://tech.us1.list-manage.com/subscribe/post?u=69617d79374ac6280dd2230b2&amp;id=acb2b876fc"
+  mailchimp_subscribe = "https://tech.us1.list-manage.com/subscribe/post?u=69617d79374ac6280dd2230b2&amp;id=acb2b876fc"
 
-    mailchimp_subscribe_id = "b_69617d79374ac6280dd2230b2_acb2b876fc"
+  mailchimp_subscribe_id = "b_69617d79374ac6280dd2230b2_acb2b876fc"
 
-    gdpr = "We use cookies to learn more about you. At any time you can delete or block cookies through your browser settings."
+  gdpr = "We use cookies to learn more about you. At any time you can delete or block cookies through your browser settings."
 
-    githubDocPrefix = "https://github.com/qdrant/docs/tree/master/qdrant/v0.7.x/"
+  githubDocPrefix = "https://github.com/qdrant/docs/tree/master/qdrant/v0.7.x/"
 
-    docVersion = "v0.7.x"
+  docVersion = "v0.7.x"
 
-    googleTagManager = "GTM-KRLCXD5"
+  googleTagManager = "GTM-KRLCXD5"
 
 [taxonomies]
     tag = "tags"
@@ -61,42 +61,107 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
 [menu]
 
-  [[menu.main]]
-    identifier = "home"
-    name = "Home"
-    weight = -100
-    url = "/"
+[[menu.main]]
+  identifier = "resources"
+  name = "Resources"
+  weight = 1
+  url = "/"
 
-  [[menu.main]]
+[[menu.main]]
     identifier = "use-case"
     name = "Use cases"
-    weight = -100
+    weight = 1
+    parent = "resources"
     url = "/use-cases/"
 
   [[menu.main]]
     identifier = "solutions"
     name = "Solutions"
-    weight = -90
+    weight = 2
+    parent = "resources"
     url = "/solutions/"
-
-  [[menu.main]]
-    identifier = "documentation"
-    name = "Documentation"
-    weight = -80
-    url = "/documentation/"
-  
 
   [[menu.main]]
     identifier = "articles"
     name = "Articles"
-    weight = -70
-    url = "/articles"
+    weight = 3
+    parent = "resources"
+    url = "/articles/"
 
   [[menu.main]]
     identifier = "blog"
     name = "Blog"
-    weight = -60
+    weight = 4
+    parent = "resources"
     url = "/blog/"
+
+  [[menu.main]]
+    identifier = "roadmap"
+    name = "Roadmap"
+    weight = 5
+    parent = "resources"
+    url = "https://github.com/qdrant/qdrant/blob/master/docs/roadmap/README.md"
+    [menu.main.params]
+       external = true
+
+  [[menu.main]]
+    identifier = "changelog"
+    name = "Changelog"
+    weight = 6
+    parent = "resources"
+    url = "https://github.com/qdrant/qdrant/releases"
+    [menu.main.params]
+        external = true
+
+[[menu.main]]
+  identifier = "documentation"
+  name = "Documentation"
+  weight = 2
+  url = "/documentation/"
+
+[[menu.main]]
+  identifier = "community"
+  name = "Community"
+  weight = 3
+  url = "/"
+
+  [[menu.main]]
+    identifier = "github"
+    name = "Github"
+    weight = 1
+    parent = "community"
+    url = "https://github.com/qdrant/qdrant"
+    pre = "<i class='fab fa-github'></i>"
+    [menu.main.params]
+        external = true
+
+  [[menu.main]]
+    identifier = "discord"
+    name = "Discord"
+    weight = 2
+    parent = "community"
+    url = "https://discord.gg/tdtYvXjC4h"
+    pre = "<i class='fab fa-discord'></i>"
+    [menu.main.params]
+      external = true
+
+  [[menu.main]]
+    identifier = "twitter"
+    name = "Twitter"
+    weight = 3
+    parent = "community"
+    url = "https://twitter.com/qdrant_engine"
+    pre = "<i class='fab fa-twitter'></i>"
+    [menu.main.params]
+      external = true
+
+  [[menu.main]]
+    identifier = "newsletter"
+    name = "Newsletter"
+    weight = 4
+    parent = "community"
+    url = "/subscribe/"
+    pre = "<i class='fas fa-envelope'></i>"
 
 [markup.goldmark.renderer]
 unsafe= true
