--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -81,23 +81,30 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     url = "/solutions/"
 
   [[menu.main]]
+    identifier = "cloud"
+    name = "Cloud"
+    weight = 3
+    parent = "resources"
+    url = "/cloud/"
+
+  [[menu.main]]
     identifier = "articles"
     name = "Articles"
-    weight = 3
+    weight = 4
     parent = "resources"
     url = "/articles/"
 
   [[menu.main]]
     identifier = "blog"
     name = "Blog"
-    weight = 4
+    weight = 5
     parent = "resources"
     url = "/blog/"
 
   [[menu.main]]
     identifier = "roadmap"
     name = "Roadmap"
-    weight = 5
+    weight = 6
     parent = "resources"
     url = "https://github.com/qdrant/qdrant/blob/master/docs/roadmap/README.md"
     [menu.main.params]
@@ -106,7 +113,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
   [[menu.main]]
     identifier = "changelog"
     name = "Changelog"
-    weight = 6
+    weight = 7
     parent = "resources"
     url = "https://github.com/qdrant/qdrant/releases"
     [menu.main.params]
