fixes after discussion

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -34,7 +34,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
 
   linkedin = "https://www.linkedin.com/company/qdrant"
   twitter = "https://twitter.com/qdrant_engine"
-  discord = "https://discord.gg/tdtYvXjC4h"
+  discord = "https://discord.qdrant.tech"
   facebook = "https://www.facebook.com/qdrant.tech"
 
   email = "info@qdrant.tech"
@@ -178,22 +178,28 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     name = "Privacy Policy"
     weight = 2
     parent = "company"
-    url = "/privacy-policy/"
+    url = "/legal/privacy-policy/"
 
   [[menu.main]]
     identifier = "terms"
     name = "Terms"
     weight = 3
     parent = "company"
-    url = "/terms/"
+    url = "/legal/terms_and_conditions/"
 
   [[menu.main]]
     identifier = "impressum"
     name = "Impressum"
     weight = 4
     parent = "company"
-    url = "/impressum/"
+    url = "/legal/impressum/"
 
+  [[menu.main]]
+    identifier = "credits"
+    name = "Credits"
+    weight = 5
+    parent = "company"
+    url = "/legal/credits/"
 
 [markup.goldmark.renderer]
 unsafe= true
