--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -24,7 +24,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
   highlightLanguages = ["python", "rust", "json", "bash", "http"]
   yandexWebmaster = ""
 
-  logo = "/images/logo_small_with_text.png"
+  logo = "/images/logo_with_text.svg"
   logo_width = "192"
   preview_image = "/images/social_preview.png"
 
