--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "qdrant-landing/public"
-command = "cd qdrant-landing ; hugo --gc --minify"
+command = "cd qdrant-landing ; hugo --gc --minify -n '/'"
 
 [context.production.environment]
 HUGO_VERSION = "0.93.3"
@@ -8,7 +8,7 @@ HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
 
 [context.deploy-preview]
-command = "cd qdrant-landing ; hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+command = "cd qdrant-landing ; hugo --gc --minify --buildFuture -b '/'"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.93.3"
